--- a/blueprint_example/single-sbatch-job/blueprint.yaml
+++ b/blueprint_example/single-sbatch-job/blueprint.yaml
@@ -1,5 +1,5 @@
 ########
-# Copyright (c) 2017 COEGSS - javier.carnero@atos.net
+# 
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,63 +13,82 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+    
+        
+        
 tosca_definitions_version: cloudify_dsl_1_3
 
 imports:
-    # to speed things up, it is possible to download this file,
-    - https://raw.githubusercontent.com/cloudify-cosmo/cloudify-manager/18.1.11/resources/rest-service/cloudify/types/types.yaml
-    # HPC pluging
-    - https://raw.githubusercontent.com/SGo-Go/cloudify-hpc-plugin/master/plugin.yaml
+    # to speed things up, it is possible downloading this file,
+    - http://raw.githubusercontent.com/mso4sc/cloudify-hpc-plugin/master/resources/types/cfy_typ
+    # relative import of plugin.yaml that resides in the blueprint directory
+    - https://raw.githubusercontent.com/MSO4SC/cloudify-hpc-plugin/master/plugin.yaml
+    #- inputs_def.yaml
 
 inputs:
-    # Monitor
-    monitor_entrypoint:
-        description: Monitor entrypoint IP
-        default: ""
+#    partition:
+#        default:
+#        INPUT:
+#          name: Partition
+#          description: Partition in which the HPC jobs will run
+#          advanced: true
+#          order: 21
+#          type: list
+#          choices:
+#              REPLACE: primary_hpc.definition.partitions
+#
+    partition_name:
+        default: "partition_name"
+        default: "hpc_example"
         type: string
 
-    # Job prefix name
     job_prefix:
         description: Job name prefix in HPCs
-        default: "coegss"
+        default: 'hpc_job'
+        
+     hpc_base_dir:
+        description: Job name prefix in HPCs
+        default: "$HOME"
         type: string
 
-    # First HPC configuration
-    coegss_hlrs_laki:
-        description: Configuration for the primary HPC to be used
-        default: {}
-    
-    # Second HPC configuration
-    coegss_psnc_eagle:
-        description: Configuration for the secondary HPC to be used
+    hpc_wm_config:
+        description: Job name prefix in HPCs
         default: {}
 
+    hpc_wm_credentials:
+        description: Job name prefix in HPCs
+        default: {}
+        
 node_templates:
-    first_hpc:
-        type: hpc.nodes.Compute
+    hpc_wm:
+        type: hpc.nodes.WorkloadManager
         properties:
-            config: { get_input: coegss_hlrs_laki }
+            config: { get_input: hpc_wm_config }
+            credentials: { get_input: hpc_wm_credentials }
             # external_monitor_entrypoint: { get_input: monitor_entrypoint }
             job_prefix: { get_input: job_prefix }
-            base_dir: "$HOME"
+            base_dir: { get_input: "hpc_base_dir" }
+            monitor_period: 15
+            skip_cleanup: true
+            simulate: True  # COMMENT to test against a real HPC
             workdir_prefix: "single_sbatch"
-            skip_cleanup: True
 
     single_job:
-        type: hpc.nodes.job
+        type: hpc.nodes.Job
         properties:
             job_options:
                 type: 'SBATCH'
-                command: "touch.script"
+                command: "touch.script single.test"
             deployment:
                 bootstrap: 'scripts/bootstrap_sbatch_example.sh'
                 revert: 'scripts/revert_sbatch_example.sh'
                 inputs:
                     - 'single'
+                    - { get_input: partition_name }
             skip_cleanup: True
         relationships:
-            - type: job_contained_in_hpc
-              target: first_hpc
+            - type: job_managed_by_wm
+              target: hpc_wm
 
 outputs:
     single_job_name:
